# podex

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .prettierignore  COMPUTE_USAGE_TRACKING_IMPLEMENTED.md  Makefile  README.md  USAGE_ANALYTICS_FIX.md  USAGE_CHARTS_FIXED.md  WORKTREE_INTEGRATION_SUMMARY.md  WORKTREE_TODOS_FIXED.md  docker-compose.test.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  turbo.json
infrastructure/: Pulumi.dev.yaml  Pulumi.yaml  README.md  __main__.py  coverage.json  pyproject.toml  pytest.ini
infrastructure/docker/workspace/: Dockerfile  workspace-entrypoint.sh
infrastructure/docker/workspace-gpu/: Dockerfile  workspace-entrypoint.sh
infrastructure/stacks/: __init__.py  compute.py  database.py  dns.py  gke.py  images.py  monitoring.py  network.py  redis.py  secrets.py  storage.py
infrastructure/tests/: conftest.py  test_compute.py  test_database.py  test_dns.py  test_gke.py  test_images.py  test_main.py  test_monitoring.py  test_network.py  test_redis.py  test_secrets.py  test_storage.py
services/agent/: Dockerfile  README.md  pyproject.toml
services/agent/skills/: bug_fix.yaml  code_review.yaml  project_setup.yaml
services/agent/src/: __init__.py  compute_client.py  config.py  config_reader.py  deps.py  main.py  orchestrator.py
services/agent/src/agents/: agent_builder.py  architect.py  base.py  chat.py  coder.py  custom.py  database_agent.py  devops.py  documentator.py  orchestrator_agent.py  reviewer.py  security.py  tester.py
services/agent/src/changes/: __init__.py  manager.py
services/agent/src/checkpoints/: __init__.py  manager.py
services/agent/src/context/: __init__.py  manager.py  summarizer.py  tokenizer.py
services/agent/src/correction/: __init__.py  error_handler.py  evaluator.py  retry.py
services/agent/src/database/: __init__.py  connection.py  conversation.py  models.py
services/agent/src/deploy/: __init__.py  e2e.py  preview.py
services/agent/src/executors/: __init__.py  claude_code_executor.py  gemini_cli_executor.py  openai_codex_executor.py
services/agent/src/git/: worktree_manager.py
services/agent/src/hooks/: __init__.py  executor.py  registry.py  types.py
services/agent/src/mcp/: __init__.py  client.py  integration.py  lifecycle.py  registry.py
services/agent/src/memory/: __init__.py  knowledge_base.py  podex_md_parser.py  qa_search.py  retriever.py  wiki_generator.py
services/agent/src/mesh/: __init__.py  agent_bus.py  conflict_detector.py  coordinator.py  results_merger.py
services/agent/src/mode_detection/: __init__.py  intent_detector.py
services/agent/src/planning/: __init__.py  background.py  comparator.py  executor.py  parallel.py  planner.py
services/agent/src/progress/: __init__.py  tracker.py
services/agent/src/providers/: __init__.py  base.py  llm.py  lmstudio.py  ollama.py  registry.py  vertex.py
services/agent/tests/: __init__.py  conftest.py  test_additional_modules.py  test_agents.py  test_base_agent_unit.py  test_changes_module.py  test_checkpoint_modules.py  test_compute_client.py  test_config.py  test_context_comprehensive.py  test_context_manager.py  test_context_modules.py  test_correction_modules.py  test_custom_agent.py  test_database_conversation.py  test_deploy_module.py  test_deps.py  test_error_handler_integration.py  test_executor_modules.py  test_executors_module.py  test_health.py  test_health_tools_unit.py  test_hooks.py  test_hooks_executor_integration.py  test_intent_detector.py  test_knowledge_base_integration.py  test_llm_provider.py  test_llm_provider_comprehensive.py  test_local_providers.py  test_main_module.py  test_mcp_comprehensive.py  test_mcp_integration.py  test_mcp_lifecycle.py  test_memory_modules.py  test_memory_tools_unit.py  test_mesh_agent_bus.py  test_mesh_coordinator_integration.py  test_mesh_module.py  test_orchestrator.py  test_orchestrator_integration.py  (+40 more)
services/api/: Dockerfile  README.md  alembic.ini  pyproject.toml
services/api/migrations/: env.py
services/api/scripts/: seed_database.py  seed_terminal_agents.py
services/api/src/: __init__.py  agent_client.py  audit_logger.py  auth_constants.py  cache.py  compute_client.py  config.py  crypto.py  dependencies.py  exceptions.py  github_client.py  main.py  mcp_config.py  mcp_defaults.py  mcp_discovery.py
services/api/tests/: __init__.py  conftest.py  test_admin.py  test_agents.py  test_auth.py  test_billing.py  test_cache_api.py  test_cli_sync.py  test_config_api.py  test_crypto.py  test_exceptions_api.py  test_git.py  test_health.py  test_local_pods.py  test_mcp.py  test_middleware_auth.py  test_oauth.py  test_password_validator.py  test_sessions.py  test_sessions_models.py  test_storage_s3.py  test_templates.py  test_voice.py  test_websocket_hub.py  test_workspaces.py
services/compute/: Dockerfile  README.md  coverage.xml  entrypoint.sh  pyproject.toml
services/compute/src/: __init__.py  api_client.py  config.py  deps.py  main.py  validation.py
services/compute/tests/: conftest.py  test_base_manager.py  test_config.py  test_deps.py  test_docker_manager.py  test_gcp_manager.py  test_health.py  test_models.py  test_parse_container_stats.py  test_routes_health.py  test_routes_preview.py  test_routes_workspaces.py  test_tunnels.py  test_validation.py  test_workspace_store.py  test_workspaces.py
services/local-pod/: Dockerfile  pyproject.toml
services/local-pod/tests/: conftest.py  test_client.py  test_cloudflared_bundle.py  test_config.py  test_docker_manager.py  test_main.py  test_native_manager.py  test_rpc_handler.py  test_ssl_check.py  test_user_config.py
services/shared/: README.md  pyproject.toml
services/shared/tests/: __init__.py  conftest.py  test_aws_polly.py  test_aws_s3.py  test_aws_transcribe.py  test_gcp_storage.py  test_gcp_stt.py  test_gcp_tts.py  test_models_billing.py  test_models_preview.py  test_models_session.py  test_models_workspace.py  test_redis_client.py  test_redis_crypto.py  test_sentry.py  test_tts_summary.py  test_usage_tracker.py  test_voice_commands.py
(+1384 files in other folders)
