[project]
name = "podex-agent"
version = "0.1.0"
description = "Podex Agent Orchestration Service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "anthropic[vertex]>=0.40.0",
    "openai>=1.10.0",
    "litellm>=1.20.0",
    "google-cloud-aiplatform>=1.38.0",
    "redis>=5.0.1",
    "hiredis>=2.3.2",
    "httpx>=0.26.0",
    "arq>=0.25.0",
    "structlog>=24.1.0",
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "podex-shared",
]

[tool.uv.sources]
podex-shared = { path = "../shared", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.14",
    "mypy>=1.8.0",
    "types-redis>=4.6.0",
    "respx>=0.20.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM",
    "TCH", "PTH", "ERA", "PL", "RUF", "S",
]
ignore = [
    # Code complexity - acceptable in this codebase
    "PLR0911",  # Too many return statements
    "PLR0912",  # Too many branches
    "PLR0913",  # Too many arguments
    "PLR0915",  # Too many statements
    "PLR2004",  # Magic value in comparison
    # Design patterns
    "PLW0603",  # Global statement (singleton pattern)
    "PLC0415",  # Import not at top level (lazy loading)
    "PLW2901",  # Loop variable overwritten
    # Style preferences
    "RUF012",   # Mutable class attributes should use ClassVar
    "C401",     # Unnecessary generator (set comprehension)
    "B905",     # zip() without strict parameter
    "SIM102",   # Use single if instead of nested if
    "SIM103",   # Return condition directly
    "SIM105",   # Use contextlib.suppress
    "S324",     # Insecure hash function (md5 used for non-crypto)
]

[tool.ruff.lint.isort]
known-first-party = ["src", "podex_shared"]

[tool.ruff.lint.per-file-ignores]
# Test files: allow assert statements (S101) and magic values like HTTP status codes (PLR2004)
"tests/**/*.py" = ["S101", "PLR2004"]

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = [
    "redis.*",
    "google.api_core.*",
    "structlog.*",
    "anthropic.*",
    "openai.*",
    "litellm.*",
    "arq.*",
    "podex_shared",
    "podex_shared.*",
    "sentry_sdk.*",
    "bs4",
    "bs4.*",
    "duckduckgo_search",
    "duckduckgo_search.*",
    "playwright",
    "playwright.*",
    "aiohttp",
    "aiohttp.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["google.cloud.*"]
ignore_errors = true

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
precision = 2
show_missing = true
fail_under = 80.0
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
]
