[project]
name = "podex-api"
version = "0.1.0"
description = "Podex API Gateway Service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "gunicorn>=22.0.0",
    "python-socketio>=5.11.0",
    "pydantic[email]>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy[asyncio]>=2.0.46",
    "asyncpg>=0.29.0",
    "redis>=5.0.1",
    "hiredis>=2.3.2",
    "httpx>=0.26.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0,<4.1.0",  # Pin for passlib 1.7.4 compatibility
    "structlog>=24.1.0",
    "podex-shared",
    "alembic>=1.18.3",
    "anthropic>=0.77.0",
    "openai>=2.16.0",
    "slowapi>=0.1.9",
    "stripe>=14.3.0",
    "pyotp>=2.9.0",
    "qrcode[pil]>=7.4.0",
    "python-multipart>=0.0.6",
    "toml>=0.10.2",
    # Security fix: CVE-2026-23490 requires pyasn1 >=0.6.2
    "pyasn1>=0.6.2",
    # Local voice services (dev mode uses these instead of AWS)
    "openai-whisper>=20231117",
    "pyttsx3>=2.90",
    "pytesseract>=0.3.10",
    # Push notifications
    "pywebpush>=2.0.0",
    # Async email - non-blocking SMTP
    "aiosmtplib>=5.1.0",
    "python-dateutil>=2.9.0.post0",
    # Prometheus metrics endpoint
    "prometheus-fastapi-instrumentator>=6.1.0",
    # GeoIP lookup for device location
    "geoip2>=4.8.0",
    "maxminddb>=2.6.0",
]

[tool.uv.sources]
podex-shared = { path = "../shared", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.8.0",  # Run tests in parallel/isolated processes
    "httpx>=0.26.0",
    "ruff>=0.14.14",
    "mypy>=1.8.0",
    "types-redis>=4.6.0",
    "types-passlib>=1.7.7",
    "types-aiofiles>=24.1.0",
    "types-PyYAML>=6.0.0",
    "types-python-dateutil>=2.9.0.20260124",
    "respx>=0.20.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "types-python-dateutil>=2.9.0.20251115",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PL",     # pylint
    "RUF",    # ruff-specific
    "S",      # bandit (security)
    "N",      # pep8-naming
    "ANN",    # flake8-annotations
    "ASYNC",  # flake8-async
    "A",      # flake8-builtins
    "COM",    # flake8-commas
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "DJ",     # flake8-django
    "EXE",    # flake8-executable
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "LOG",    # flake8-logging
    "G",      # flake8-logging-format
    "PIE",    # flake8-pie
    "PYI",    # flake8-pyi
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "SLOT",   # flake8-slots
    "TID",    # flake8-tidy-imports
    "INT",    # flake8-gettext
    "FBT",    # flake8-boolean-trap
    "PERF",   # perflint
    "FURB",   # refurb
    "TRY",    # tryceratops
    "FLY",    # flynt
]
ignore = [
    "ANN401",  # Any is required for JSON APIs and httpx kwargs
    "COM812",  # Conflicts with formatter - trailing comma detection
    # FastAPI patterns
    "B008",    # Depends() in function defaults is the standard FastAPI pattern
    "FBT001",  # Boolean positional argument - valid for FastAPI optional params
    "FBT002",  # Boolean default argument - valid for FastAPI optional params
    "FBT003",  # Boolean positional value in function call
    # Code complexity - acceptable in this codebase
    "PLR0911", # Too many return statements
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments - FastAPI routes often have many dependencies
    "PLR0915", # Too many statements
    "PLR2004", # Magic value in comparison - common in HTTP status codes
    "PLW0603", # Global statement - used for singleton patterns
    # Design patterns
    "PLW2901", # Loop variable overwritten
    "SLF001",  # Private member access - sometimes necessary for framework integration
    # Exception handling
    "B904",    # Within except clause, raise without from - intentional
    # SQLAlchemy patterns
    "E711",    # Comparison to None - required for SQLAlchemy where() clauses
    "E712",    # Comparison to True/False - required for SQLAlchemy where() clauses
    # Type checking
    "TC002",   # Move import into type-checking block - runtime imports needed
    # Security (false positives)
    "S105",    # Possible hardcoded password - false positive on variable names
    "S110",    # Try/except/pass - intentional suppression
    "S311",    # Standard pseudo-random generators - OK for non-crypto uses
    "S607",    # Start process with partial path - intentional for system commands
    # Style preferences
    "RUF012",  # Mutable class attributes should use ClassVar
    "S324",    # Insecure hash function (md5 used for non-crypto)
    # Path handling
    "PTH123",  # open() should use Path.open() - not always necessary
    # Naming
    "N817",    # CamelCase imported as acronym - acceptable for abbreviations
    # Performance
    "PERF401", # Use list comprehension - generator expressions are sometimes clearer
    # Testing
    "PT028",   # pytest.param without id - not always necessary
]

[tool.ruff.lint.isort]
known-first-party = ["src", "podex_shared"]

[tool.ruff.lint.per-file-ignores]
# Test files: allow assert statements, magic values, unused vars, long lines, type annotations, hardcoded passwords, nested with, unused unpacked, etc.
"tests/**/*.py" = ["S101", "S106", "PLR2004", "F841", "E501", "S113", "UP035", "I001", "F401", "UP006", "RUF019", "ARG001", "PTH120", "PTH118", "PTH100", "PLC0415", "ANN001", "ANN002", "ANN003", "ANN201", "ANN202", "ANN204", "SIM117", "RUF059"]
# Admin routes: allow FastAPI patterns (unused request for decorators, boolean params, many args)
"src/routes/admin/**/*.py" = ["ARG001", "FBT002", "PLR0913", "PLR2004"]
# Route files: request parameter needed for rate limiting decorator but not used in function body
# Also allow boolean params (FBT002), many args (PLR0913), and too many statements (PLR0915)
"src/routes/auth.py" = ["ARG001"]
"src/routes/mfa.py" = ["ARG001"]
"src/routes/oauth.py" = ["ARG001", "PLC0415"]
"src/routes/sessions.py" = ["ARG001", "FBT002", "TRY400", "TRY003", "PLC0415"]
"src/routes/agent_templates.py" = ["ARG001"]
"src/routes/knowledge.py" = ["ARG001", "PLR0913"]
"src/routes/local_pods.py" = ["ARG001"]
"src/routes/mcp.py" = ["ARG001", "PLC0415"]
"src/routes/plans.py" = ["ARG001", "PLR0913"]
"src/routes/templates.py" = ["ARG001"]
# Billing routes: complex billing logic requires many branches/statements/arguments
"src/routes/billing.py" = ["ARG001", "PLR0911", "PLR0912", "PLR0913", "PLR0915", "PLR2004", "E501", "F841", "FBT001", "FBT002", "PLC0415"]
# Webhooks: complex stripe event handling, many args for helper, rate limiter params
"src/routes/webhooks.py" = ["ARG001", "PLR0913", "E501"]
# Workspaces: file operations need extra params, lazy imports
"src/routes/workspaces.py" = ["PLR0913", "PLC0415"]
# Agents: message handling needs extra params, lazy imports
"src/routes/agents.py" = ["PLR0913", "PLW2901", "PLC0415"]
# Email service: complex email rendering with many params
"src/services/email.py" = ["PLR0913", "E501"]
# Terminal agents: complex session management with many branches, subprocess PTY operations
"src/routes/terminal_agents.py" = ["PLR0912", "PTH111", "PTH112", "B904", "TRY300", "E261", "ASYNC220", "S603", "PLW1509", "ASYNC109", "ARG002"]
# Crypto: exception messages and magic values
"src/crypto.py" = ["TRY003", "PLR2004"]
# Git routes: validation logic with magic values, many params for compare function
"src/routes/git.py" = ["PLR2004", "PIE810", "PLR0913"]
# Uploads: path validation, lazy imports
"src/routes/uploads.py" = ["PLR2004", "PLC0415"]
# Doctor: lazy imports for diagnosis
"src/routes/doctor.py" = ["PLC0415"]
# User config: lazy imports
"src/routes/user_config.py" = ["PLC0415"]
# Hooks: performance suggestions, rate limiter params
"src/routes/hooks.py" = ["ARG001", "PERF401"]
# GCS storage: exception messages
"src/storage/gcs.py" = ["TRY003"]
# Sharing routes: upsert logic with inline imports
"src/routes/sharing.py" = ["PLC0415", "SIM102"]
# Database connection: seeding function has many branches for different entity types, lazy imports
"src/database/connection.py" = ["PLR0912", "PLC0415"]
# Main app: lazy imports in background tasks to avoid circular imports
"src/main.py" = ["PLC0415"]
# Auth middleware: lazy import for token blacklist service
"src/middleware/auth.py" = ["PLC0415"]
# Admin compliance: lazy imports for uuid and time
"src/routes/admin/compliance.py" = ["PLC0415"]
# LLM providers: lazy imports, rate limiter params
"src/routes/llm_providers.py" = ["ARG001", "PLC0415"]
# Project health: lazy imports, rate limiter params
"src/routes/project_health.py" = ["ARG001", "PLC0415"]
# Project init: lazy imports
"src/routes/project_init.py" = ["PLC0415"]
# Voice: lazy imports for audio processing libraries
"src/routes/voice.py" = ["PLC0415"]
# WebSocket hub: lazy imports to avoid circular dependencies
"src/websocket/hub.py" = ["PLC0415"]
# Memory routes: FastAPI routes with many params and boolean confirm query param
"src/routes/memory.py" = ["ARG001", "PLR0913", "FBT001", "FBT002"]
# Skills routes: FastAPI patterns (Depends, boolean params, type import)
"src/routes/skills.py" = ["ARG001", "PLR0913", "FBT001", "FBT002", "FBT003", "B008", "TC002"]
# Compute client: exception messages and return in try block for complex flow
"src/compute_client.py" = ["TRY003", "TRY300"]
# GitHub client: async context manager patterns, runtime error messages, datetime parsing, many params
"src/github_client.py" = ["ANN001", "ANN003", "ANN204", "TRY003", "E741", "F401", "UP037", "FURB162", "PLR0913", "FBT001", "FBT002"]
# GitHub routes: FastAPI patterns with Depends and many dict returns
"src/routes/github.py" = ["ARG001", "PLR0913", "FBT001", "FBT002", "FBT003", "B008", "TC002", "RET504"]
# Audit logger: decorator patterns, many params, logging best practices, security false positives
"src/audit_logger.py" = ["I001", "UP035", "TC002", "S105", "ANN204", "UP037", "PLR0913", "G004", "SIM105", "S110", "TRY400", "ANN002", "ANN003", "ANN201", "ANN202", "TRY300", "RET504"]
# Rate limit middleware: TRY300 false positive on return statement after if/return
"src/middleware/rate_limit.py" = ["TRY300"]
# Admin audit routes: FastAPI patterns with Depends/Query, inline imports
"src/routes/admin/audit.py" = ["TC002", "B008", "PLC0415", "I001"]
# Token blacklist: lazy imports for background task session
"src/services/token_blacklist.py" = ["PLC0415"]
# Local pod hub: lazy imports for async handling
"src/websocket/local_pod_hub.py" = ["PLC0415"]
# Route files: rate limiter params require unused response argument
"src/routes/changes.py" = ["ARG001"]
"src/routes/checkpoints.py" = ["ARG001"]
"src/routes/context.py" = ["ARG001"]
"src/routes/cost_insights.py" = ["ARG001"]
"src/routes/health_checks.py" = ["ARG001"]
"src/routes/marketplace.py" = ["ARG001"]
"src/routes/pending_changes.py" = ["ARG001"]
"src/routes/productivity.py" = ["ARG001"]
"src/routes/skill_repositories.py" = ["ARG001"]
"src/routes/skill_templates.py" = ["ARG001"]
"src/routes/subagents.py" = ["ARG001"]
"src/routes/worktrees.py" = ["ARG001"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
show_error_codes = true
show_column_numbers = true
pretty = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "socketio.*",
    "redis.*",
    "dateutil.*",
    "google.api_core.*",
    "google.cloud.*",
    "structlog.*",
    "passlib.*",
    "jose.*",
    "jwt.*",
    "podex_shared",
    "podex_shared.*",
    "stripe",
    "stripe.*",
    "slowapi",
    "slowapi.*",
    "pyotp",
    "pyotp.*",
    "qrcode",
    "qrcode.*",
    "whisper",
    "whisper.*",
    "pyttsx3",
    "pyttsx3.*",
    "pytesseract",
    "pytesseract.*",
    "pywebpush",
    "pywebpush.*",
    "aiosmtplib",
    "aiosmtplib.*",
    "prometheus_fastapi_instrumentator",
    "prometheus_fastapi_instrumentator.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["src.websocket.hub", "src.websocket.local_pod_hub", "src.routes.*", "src.middleware.rate_limit"]
disallow_untyped_decorators = false
# socketio.AsyncNamespace has type Any due to missing stubs
disallow_subclassing_any = false

[[tool.mypy.overrides]]
module = ["src.routes.webhooks"]
# Stripe SDK types are incomplete - webhooks heavily use Stripe objects
# The SDK returns dict[str, Any] for many operations despite having typed return hints
ignore_errors = true

[[tool.mypy.overrides]]
module = ["src.github_client", "src.routes.github", "src.audit_logger", "src.routes.admin.audit"]
# GitHub integration, audit logger, and admin audit use many dict returns and complex typing
ignore_errors = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore:JWT_SECRET_KEY not set - using auto-generated secret:UserWarning",
]
markers = [
    "integration: marks tests that require real database/redis (deselect with '-m \"not integration\"')",
    "unit: marks tests that use mocks only",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
precision = 2
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
]
