[project]
name = "podex-compute"
version = "0.1.0"
description = "Podex Compute Service - Workspace Management"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "docker>=7.0.0",
    "boto3>=1.34.0",
    "aioboto3>=12.3.0",
    "redis>=5.0.1",
    "hiredis>=2.3.2",
    "httpx>=0.26.0",
    "structlog>=24.1.0",
    "websockets>=12.0",
    "podex-shared",
]

[tool.uv.sources]
podex-shared = { path = "../shared", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.14",
    "mypy>=1.8.0",
    "types-redis>=4.6.0",
    "types-docker>=7.0.0",
    "respx>=0.20.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM",
    "TCH", "PTH", "ERA", "PL", "RUF", "S",
]

[tool.ruff.lint.isort]
known-first-party = ["src", "podex_shared"]

[tool.ruff.lint.per-file-ignores]
# Test files: allow assert statements (S101) and magic values like HTTP status codes (PLR2004)
"tests/**/*.py" = ["S101", "PLR2004"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "docker.*",
    "redis.*",
    "aioboto3.*",
    "boto3.*",
    "botocore.*",
    "structlog.*",
    "podex_shared",
    "podex_shared.*",
    "sentry_sdk.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=90"
testpaths = ["tests"]
asyncio_mode = "auto"
