[project]
name = "podex-compute"
version = "0.1.0"
description = "Podex Compute Service - Workspace Management"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "gunicorn>=22.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "docker>=7.0.0",
    "redis>=5.0.1",
    "hiredis>=2.3.2",
    "httpx>=0.26.0",
    "structlog>=24.1.0",
    "websockets>=12.0",
    "podex-shared",
    # Prometheus metrics endpoint
    "prometheus-fastapi-instrumentator>=6.1.0",
]

[tool.uv.sources]
podex-shared = { path = "../shared", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.14",
    "mypy>=1.8.0",
    "types-redis>=4.6.0",
    "types-docker>=7.0.0",
    "respx>=0.20.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "respx>=0.22.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM",
    "TCH", "PTH", "ERA", "PL", "RUF", "S",
]
ignore = [
    # Code complexity - acceptable in this codebase
    "PLR0911",  # Too many return statements
    "PLR0912",  # Too many branches
    "PLR0913",  # Too many arguments - container management often has many params
    "PLR0915",  # Too many statements
    "PLR2004",  # Magic value in comparison - common in thresholds
    "PLW0603",  # Global statement - used for singleton patterns
    # Exception handling
    "S110",     # Try/except/pass - intentional suppression
    # Path handling
    "PTH123",   # open() should use Path.open()
]

[tool.ruff.lint.isort]
known-first-party = ["src", "podex_shared"]

[tool.ruff.lint.per-file-ignores]
# Test files: allow assert statements, magic values, unused vars, long lines, inline imports, type annotations, type checking, etc.
"tests/**/*.py" = ["S101", "PLR2004", "F841", "E501", "ARG001", "ARG002", "PLC0415", "ANN001", "ANN002", "ANN003", "ANN201", "ANN202", "ANN204", "I001", "TC002", "TC003", "RUF059"]
# Heartbeat manager: import at end for type alias, SIM patterns acceptable
"src/managers/heartbeat.py" = ["E402", "SIM102", "SIM105"]
# Multi-server docker: SIM patterns acceptable for explicit control flow
"src/managers/multi_server_docker.py" = ["SIM102", "SIM105", "SIM108"]
# Workspace orchestrator: lazy imports for uuid and container spec
"src/managers/workspace_orchestrator.py" = ["PLC0415"]
# Placement manager: acceptable return pattern
"src/managers/placement.py" = ["SIM103"]
# Routes files: request parameter needed for middleware but not always used
"src/routes/*.py" = ["ARG001"]
# Storage cleanup: timeout patterns
"src/storage/cleanup.py" = ["SIM105"]
# Models: pydantic model config
"src/models/*.py" = ["RUF012"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = false
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "docker.*",
    "redis.*",
    "structlog.*",
    "podex_shared",
    "podex_shared.*",
    "sentry_sdk.*",
    "google.*",
    "prometheus_fastapi_instrumentator",
    "prometheus_fastapi_instrumentator.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["google.cloud.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["src.managers.*"]
# Docker SDK has complex overloaded types that don't work well with asyncio.to_thread
disallow_any_generics = false
warn_return_any = false

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
precision = 2
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
]
