[project]
name = "podex-shared"
version = "0.1.0"
description = "Shared Python utilities for Podex services"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.5.0",
    "redis>=5.0.1",
    "aioboto3>=12.3.0",
    "structlog>=24.1.0",
    "sentry-sdk[fastapi,sqlalchemy,httpx,pure_eval]>=2.19.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.14",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/podex_shared"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM",
    "TCH", "PTH", "ERA", "PL", "RUF",
]

[tool.ruff.lint.isort]
known-first-party = ["podex_shared"]

[tool.ruff.lint.per-file-ignores]
# Test files: allow assert statements (S101) and magic values (PLR2004)
"tests/**/*.py" = ["S101", "PLR2004"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = false
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "redis.*",
    "aioboto3.*",
    "boto3.*",
    "botocore.*",
    "sentry_sdk.*",
    "structlog.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
